2015-04-30  Caroline Tice  <cmtice@google.com>

        PR 65929
	* config/elfos.h (ASM_DECLARE_COLD_FUNCTION_NAME): New macro definition.
	(ASM_DECLARE_COLD_FUNCTION_SIZE): New macro definition.
	* doc/tm.texi.in (ASM_DECLARE_COLD_FUNCTION_NAME): Document new macro.
	(ASM_DECLARE_COLD_FUNCTION_SIZE): Document new macro.
	* doc/tm.texi: Regenerate.
	* final.c (final_scan_insn):  Use ASM_DECLARE_COLD_FUNCTION_NAME
	instead of ASM_DECLARE_FUNCTION_NAME for cold partition name.
	* varasm.c (assemble_end_function):  Use ASM_DECLARE_COLD_FUNCTION_SIZE
	instead of ASM_DECLARE_FUNCTION_SIZE for cold partition size.

2015-04-30  Marek Polacek  <polacek@redhat.com>

	* varasm.c (handle_cache_entry): Fix logic.

2015-04-30  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.md (*extr<mode>5_insn_alt): New pattern.
	(*extrsi5_insn_uxtw_alt): Likewise.
	* config/aarch64/aarch64.c (aarch64_extr_rtx_p): New function.
	(aarch64_rtx_costs, IOR case): Use above to properly cost extr
	operations.

2015-04-30  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.c (aarch64_rtx_costs): Handle pattern for
	fabd in ABS case.

2015-04-30  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.md
	(*eor_one_cmpl_<SHIFT:optab><mode>3_alt): New pattern.
	(*eor_one_cmpl_<SHIFT:optab>sidi3_alt_ze): Likewise.
	* config/aarch64/aarch64.c (aarch64_rtx_costs): Handle MVN-shift
	appropriately.  Handle alternative EON form.

2015-04-30  Renlin Li  <renlin.li@arm.com>

	* config/aarch64/aarch64-simd.md (vec_shr): Defined as an unspec.
	* config/aarch64/iterators.md (unspec): Add UNSPEC_VEC_SHR.

2015-04-30  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65873
	* ipa-inline.c (can_inline_edge_p): It is safe to inline across
	-fstrict-aliasing boundaries.

2015-04-30  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.c (aarch64_rtx_mult_cost): Handle MNEG
	and [SU]MNEGL patterns.

2015-04-30  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
